[tool.poetry]
name = "store-3d-analyzer"
version = "0.1.0"
description = "CCTV footage based 3D store analysis tool"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.8"
numpy = "^1.24.0"
opencv-python = "^4.8.0"
open3d = "0.19.0"
pathlib = "^1.0.1"
torch = "^2.2.0"
ultralytics = "^8.1.0"
supervision = "^0.18.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.9.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 140
target-version = "py310"

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # Ruff-specific rules
    "I",    # isort
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "S",    # flake8-bandit
]